--- a/teamMembers.html
+++ b/teamMembers.html
@@ -571,7 +571,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Bhavik Kothari </h2>
-												<h3>Technical Team </h3>
+												<h3>Tech Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -628,7 +628,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Arunima Chaudhuri </h2>
-												<h3>Community Management </h3>
+												<h3>Community Management Team</h3>
 											</div>
 
 											<div class="media-icons">
@@ -666,7 +666,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Shravani Kaware </h2>
-												<h3>Tech team </h3>
+												<h3>Tech Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -704,7 +704,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Divjot Singh Arora </h2>
-												<h3>Pr And Outreach Manager </h3>
+												<h3>Pr And Outreach Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -723,7 +723,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Priya Chakraborty </h2>
-												<h3>Content Team </h3>
+												<h3>Content Creation Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -742,7 +742,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Sakshi Goenka </h2>
-												<h3>Event management team </h3>
+												<h3>Event Management Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -761,7 +761,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Pravin Nag </h2>
-												<h3>Content Creator </h3>
+												<h3>Content Creation Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -780,7 +780,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Nishtha Pandey  </h2>
-												<h3>PR and Outreach </h3>
+												<h3>PR and Outreach Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -799,7 +799,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">PL VISHNUPPRIYAN </h2>
-												<h3>Content Team </h3>
+												<h3>Content Creation Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -837,7 +837,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Khushboo jha  </h2>
-												<h3>PR and Outreach </h3>
+												<h3>PR and Outreach Team</h3>
 											</div>
 
 											<div class="media-icons">
@@ -875,7 +875,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">M.V.N.S.Aishwarya </h2>
-												<h3>Content creation , technical  </h3>
+												<h3>Content creation and Tech Team  </h3>
 											</div>
 
 											<div class="media-icons">
@@ -913,7 +913,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">SRIJANNA DAS </h2>
-												<h3>Management Team </h3>
+												<h3>Community Management Team </h3>
 											</div>
 
 											<div class="media-icons">
@@ -932,7 +932,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Krupali Trivedi </h2>
-												<h3>Content Team  </h3>
+												<h3>Content Creation Team  </h3>
 											</div>
 
 											<div class="media-icons">
