--- a/teamMembers.html
+++ b/teamMembers.html
@@ -495,7 +495,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Renitha </h2>
-												<h3>Core Team </h3>
+												<h3>Tech Team </h3>
 											</div>
 
 											<div class="media-icons">
