--- a/teamMembers.html
+++ b/teamMembers.html
@@ -590,7 +590,7 @@
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Manan Jain </h2>
-												<h3>Community Management </h3>
+												<h3>Content Creation Team </h3>
 											</div>
 
 											<div class="media-icons">
