--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<div class="container">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<a href="index.html" class="navbar-brand"> <img src="./assets/img/logo-small.png"
-						class="logo img-fluid " alt="CodeIN-Community-Website logo"></a>
+						 alt="CodeIN-Community-Website logo"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<i class="lni-menu"></i>
