--- a/teamMembers.html
+++ b/teamMembers.html
@@ -309,7 +309,7 @@
 											</div>
 
 											<div class="media-icons">
-												<a href="https://www.linkedin.com/in/nithish-r-432339202"
+												<a href="https://www.linkedin.com/in/riya-jaiswal-2060771b1"
 													target="_blank"><i class="fab fa-linkedin"></i></a>
 											</div>
 
@@ -1003,7 +1003,7 @@
 
 										<div class="testimonial-item col-lg-3 col-md-4 col-sm-12">
 											<div class="img-thumb">
-												<img src="./assets/img/team/7my6ly - Aastha Shah.jpg" class="lazyload"
+												<img src="./assets/img/team/Aastha Shah.jpg" class="lazyload"
 													alt="">
 											</div>
 											<div class="info">
@@ -1022,7 +1022,7 @@
 
 										<div class="testimonial-item col-lg-3 col-md-4 col-sm-12">
 											<div class="img-thumb">
-												<img src="./assets/img/team/14ka5l - Sulagna Dutta Roy.jpg" class="lazyload"
+												<img src="./assets/img/team/Sulagna Dutta Roy.jpg" class="lazyload"
 													alt="">
 											</div>
 											<div class="info">
