--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
 									<div class="swiper-slide">
 										<div class="testimonial-item">
 											<div class="img-thumb">
-												<img src="./assets/img/team/aastha.jpg" alt="Team members">
+												<img src="./assets/img/team/Aastha Shah.jpg" alt="Team members">
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Aastha Shah</h2>
@@ -1257,7 +1257,7 @@
 									<div class="swiper-slide">
 										<div class="testimonial-item">
 											<div class="img-thumb">
-												<img src="./assets/img/team/sulangna.jpg" alt="Team members">
+												<img src="./assets/img/team/Sulagna Dutta Roy.jpg" alt="Team members">
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Sulagna Dutta Roy</h2>
