--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 									<div class="swiper-slide">
 										<div class="testimonial-item">
 											<div class="img-thumb">
-												<img src="./assets/img/team/riya.jpg" alt="Team members">
+												<img src="./assets/img/team/IMG_20221005_011143_263 - Riya Jaiswal.jpg" alt="Team members">
 											</div>
 											<div class="info">
 												<h2 class="text_dark">Riya Jaiswal</h2>
