Added Team member in Hero section

--- a/index.html
+++ b/index.html
@@ -459,6 +459,27 @@
 										</div>
 									</div>
 
+									<div class="swiper-slide">
+										<div class="testimonial-item">
+											<div class="img-thumb">
+												<img src="./assets/img/team/IMG-20221222-WA0017 - Nithish R.jpg" alt="Team members">
+											</div>
+											<div class="info">
+												<h2 class="text_dark">R Nithish</h2>
+												<h3>Tech Team
+												</h3>
+											</div>
+
+											<div class="media-icons">
+
+												<a href="https://github.com/nithishrcta" target="_blank"><i class="fab fa-github"></i></a>
+												<a href="https://www.linkedin.com/in/nithish-r-432339202" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+											</div>
+
+										</div>
+									</div>
+
 
 
 									<div class="swiper-slide">
