--- a/index.html
+++ b/index.html
@@ -1342,7 +1342,7 @@
 									<img src="./assets/img/team/parul.jpeg" alt="Team members">
 								</div>
 								<div class="info">
-									<h2 class="text_dark"> Parul Chadda </h2>
+									<h2 class="text_dark"> Parul Chaddha </h2>
 									<h3> Co-Founder </h3>
 								</div>
 
