modified the navbar

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	<header id="header-wrap">
 		<!-- Navbar Start -->
 		<nav class="navbar navbar-expand-md bg-white fixed-top scrolling-navbar">
-			<div class="container">
+			<div class="container nav_container">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<a href="index.html" class="navbar-brand"> <img src="./assets/img/logo-small.png"
 						 alt="CodeIN-Community-Website logo"></a>
@@ -172,7 +172,7 @@
 							</a>
 						</li>
 
-						<div class="dropdown nav-item">
+						<div class="dropdown nav-item" id="nav_dropdown">
 							<button class="nav-link btn btn-outline-warning rounded px-3 dropbtn" id="moreDetails">More Options
 							  <i class="fa fa-caret-down"></i>
 							</button>
