--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							</a>
 						</li>
 
-						<div class="dropdown nav-item" id="nav_dropdown">
+						<div class="dropdown nav-item">
 							<button class="nav-link btn btn-outline-warning rounded px-3 dropbtn" id="moreDetails">More Options
 							  <i class="fa fa-caret-down"></i>
 							</button>
