--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
 
 							<div class="testimonial-item founder-item col-lg-3 col-md-4 col-sm-12">
 								<div class="img-thumb">
-									<img src="./assets/img/team/Saurav Mukherjee.webp" alt="">
+									<img src="./assets/img/team/saurav.JPEG" alt="">
 								</div>
 								<div class="info">
 									<h2 class="text_dark">Saurav Mukherjee</h2>
