--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#testimonial1">
-								Testimonials
+							<a class="nav-link" href="./giveaway.html">
+								Giveaways
 							</a>
 						</li>
 						<li class="nav-item">
