Replaced the error link with correct link

--- a/index.html
+++ b/index.html
@@ -1902,7 +1902,7 @@
 
 				<div class="img_container" data-aos="fade-up" data-aos-duration="1500">
 					<div class="community_box box1" data-tilt data-tilt-scale="1.1">
-						<a href="https://learnwith.community/" style="text-decoration: none;" target="_blank" title="Learn With Community">
+						<a href="https://www.linkedin.com/company/learn-with-community/?originalSubdomain=in" style="text-decoration: none;" target="_blank" title="Learn With Community">
 							<img src="./assets/img/Partners/LWC.webp" class="communityPartner__image" alt="LWC logo">
 						</a>
 					</div>
