--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
 									More</i></a>
 							</div>
 
-
-							<br>Join the community on Discord for interaction with developers from all over India.
-
-
+                             <br>
+							 <p >Join the community on Discord for interaction with developers from all over India.</p>
+							
+							
 							</p>
 							<br>
 
@@ -1563,7 +1563,7 @@
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
 		  <h2 class="section-title wow fadeInDown text_dark" data-wow-delay="0.3s">Testimonials</h2>
 		  <div class="shape-testimonial wow fadeInDown" data-wow-delay="0.3s"></div>
-		  <div class="bio-testimonial wow fadeInDown">What does the community have to say about us?</div>
+		 <div class=" bio-testimonial wow fadeInDown"> <p>What does the community have to say about us? </p></div>
 		</div>
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 		  <div class="row justify-content-center">
